--- a/css/styles.css
+++ b/css/styles.css
@@ -3235,7 +3235,7 @@ img.u-pull-left {
     font-size        : 16rem;/*var(--text-huge-size);*/
     line-height      : 1;
     letter-spacing   : -0.015em;
-    margin-top       : calc(var(--text-huge-size) / 2 * -1.2);
+    margin-top       : calc(16rem / 2 * -1.2);
     margin-bottom    : var(--vspace-1_25);
     color            : white;
 }
