--- a/css/styles.css
+++ b/css/styles.css
@@ -3231,7 +3231,7 @@ img.u-pull-left {
 }
 
 .s-intro__text-huge {
-    --text-huge-size : 24.6rem;
+    /*text-huge-size : 24.6rem;*/
     font-size        : 16rem;/*var(--text-huge-size);*/
     line-height      : 1;
     letter-spacing   : -0.015em;
