--- a/css/styles.css
+++ b/css/styles.css
@@ -3223,7 +3223,7 @@ img.u-pull-left {
     line-height    : 1.0998;
     letter-spacing : -.01em;
     margin-top     : 0;
-    color          : white;
+    color          : black;
 }
 
 .s-intro__text h3 span {
@@ -3237,7 +3237,7 @@ img.u-pull-left {
     letter-spacing   : -0.015em;
     margin-top       : calc(16rem / 2 * -1.2);
     margin-bottom    : var(--vspace-1_25);
-    color            : white;
+    color            : cadetblue;
 }
 
 /* --------------------------------------------------------------------
